[package]
name = "css-knife"
version = "0.1.5"
edition = "2021"
authors = ["uros-5"]
license = "MIT"
description = "A tool for shortening css classes"
readme = "README.md"
homepage = "https://github.com/uros-5/css-knife"
repository = "https://github.com/uros-5/css-knife"
keywords = ["tailwindcss", "css", "html"]
categories = ["command-line-utilites"]

[dependencies]
lightningcss = { version="1.0.0-alpha.47", features = ["visitor", "jsonschema"] }
lol_html = "1.2.0"
parcel_selectors = { version="0.26.2"  }
scraper = "0.17.1"
serde = {version = "1.0.188", features = ["derive"]}
string_cache = "0.8.7"
swc_core = { version = "0.83.*", features = ["ecma_plugin_transform", "__parser", "ecma_codegen"] }
swc_ecma_parser = {version = "0.141.0", features = ["swc_ecma_visit", "debug"]}
toml = "0.8.2"
minijinja = { version = "1.0.0", features = ["loader", "json", "urlencode", "preserve_order", "unstable_machinery_serde"] }

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = 3

[[bin]]
name = "css-knife"
path = "src/main.rs"
